# go-containerregistry

cmd/: BUILD.bazel  poke.go
v1/: config.go  hash.go  hash_test.go  manifest.go  manifest_test.go
v1/remote/: BUILD.bazel  image.go
v1/remote/transport/: bearer.go  bearer_test.go  scheme.go  scheme_test.go  transport.go
